fixed: adjusted buggy overflow issues

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -80,8 +80,9 @@
 
 .detailsContainer {
   display: flex;
-  height: 55%;
+  height: 40%;
   margin-left: 15px;
+  overflow: scroll;
 }
 
 .detailsLeft {
